--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobirise</title>
+    <link rel="stylesheet" href="./src/css/main.css">
 </head>
 <body>
-    <header></header>
+<header>
+    <div class="header-logo">
+        <img src="https://mobirise.com/extensions/depotamp/assets/images/logo1.png">
+        <p>DepotAMP</p>
+    </div>
+    <div class="header-menu">
+        <div class="dropdown">
+            <p>Home</p>
+        </div>
+        <div class="dropdown">
+            <p>Live Demo</p>
+            <div class="dropdown-content">
+                <a href="#">Furniture Store</a>
+                <a href="#">Book Store</a>
+                <a href="#">Fabric Store</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <p>Live Demo Blocks</p>
+            <div class="dropdown-content">
+                <a href="#">Headers and Features</a>
+                <a href="#">Images and Gallery</a>
+                <a href="#">Shops</a>
+                <a href="#">Pricing and Progress</a>
+                <a href="#">Clients and Testimonials</a>
+                <a href="#">Forms and Videos</a>
+                <a href="#">Socials and Maps</a>
+                <a href="#">Footers</a>
+            </div>
+        </div>
+    </div>
+    <button class="buy-btn">Buy Now</button>
+</header>
 </body>
 </html>
