some changes in head segment

--- a/index.html
+++ b/index.html
@@ -41,5 +41,30 @@
     </div>
     <button class="buy-btn">Buy Now</button>
 </header>
+<div class="head-about">
+    <div class="head-about-content">
+        <p>MAY-2019 #depotamp</p>
+        <p>Furniture Store Template</p>
+        <p>Furniture Store</p>
+        <p>Revive every area in your house for less with furnishings that's on-trend and
+            also economical, also. Find ideal pieces for huge residences, little spaces,
+            houses, workshops. Locate both comfort and also innovative style amongst our
+            choice of furniture. Visit your regional store to browse even more and also
+            purchase. What do you think of the Furniture Store Template?</p>
+        <button class="btn">Shop Now</button>
+        <div class="header-about-content-cities">
+            <div class="header-about-content-city">
+                <div class="stick"></div>
+                <p>London, UK</p>
+                <p>Chestnut Street 22, 163</p>
+            </div>
+            <div class="header-about-content-city">
+                <div class="stick"></div>
+                <p>London, UK</p>
+                <p>Chestnut Street 22, 163</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
